# mle-training

./: .README.md.swp  .gitignore  Dockerfile  README.md  env.yml  nonstandardcode.py  nonstandardcode.py:Zone.Identifier  setup.cfg  setup.py
deploy/conda/: env.yaml  environment.yml
docs/source/: conf.py
notebooks/: project.ipynb
src/housing/: __main__.py  get_argument.py  ingest_data.py  logging_setup.py  score.py  train.py  utils.py  values.conf
tests/functional_tests/: test_training.py
tests/unit_tests/: test_ingest_data.py  test_score.py  test_train.py
