[metadata]
name = housing-ApurvTA
version = 0.1
author = Master Apurv
author_email = apurv.master@tigeranalytics.com
description = In this package a model is created and implemented on housing data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Apurv-TA/mle-training
project_urls = Bug Tracker = https://github.com/Apurv-TA/mle-training/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[loggers]
keys = root

[handlers]
keys = consoleHandler

[formatters]
keys = simpleFormatter, default

[logger_root]
level = DEBUG
handlers = consoleHandler

[handler_consoleHandler]
class = StreamHandler
level = DEBUG
formatter = default
args = (sys.stdout,)

[formatter_simpleFormatter]
format = %(asctime)s - %(levelname)s - %(message)s

[formatter_default]
format = %(message)s

[default]
log_level = DEBUG
data = ../../data/
save = ../../artifacts/
verbosity = 0

[isort]
include_trailing_comma = True
use_parentheses = True
line_length = 79

[flake8]
max-line-length = 79
ignore = F401
exclude = .git, .vscode, .ipynb_checkpoints, housing/__init__.py, setup.py,
docstring-convention = numpy
dictionaries = en_US,python,technical
per-file-ignores =
  **/tests/*.py: S101